@@ -80,7 +80,9 @@ New features, fixes in version 1.0.4
 	Fix graph scaling with explicit "bytes=false", which was
 	misinterpreted by the graphing code.
 
-	Updated getFormat.c from John Woolner. Patch #454472.
+	Updated getFormat.c from John Woolner [Patch #454472].
+
+        Added support for sparc64-netbsd from Edwin Mons [Patch #803408].
 
         Documented the "use-gprint" target option [Bug #667178].
 
